docs/1.0rc2/_sources/api/gammapy.estimators.FluxProfileEstimator.rst.txt
FluxProfileEstimator
====================

.. currentmodule:: gammapy.estimators

.. autoclass:: FluxProfileEstimator
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FluxProfileEstimator.config_parameters
      ~FluxProfileEstimator.projected_distance_axis
      ~FluxProfileEstimator.selection_optional
      ~FluxProfileEstimator.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~FluxProfileEstimator.copy
      ~FluxProfileEstimator.estimate_best_fit
      ~FluxProfileEstimator.estimate_counts
      ~FluxProfileEstimator.estimate_errn_errp
      ~FluxProfileEstimator.estimate_flux_point
      ~FluxProfileEstimator.estimate_npred
      ~FluxProfileEstimator.estimate_npred_excess
      ~FluxProfileEstimator.estimate_scan
      ~FluxProfileEstimator.estimate_ts
      ~FluxProfileEstimator.estimate_ul
      ~FluxProfileEstimator.get_scale_model
      ~FluxProfileEstimator.run

   .. rubric:: Attributes Documentation

   .. autoattribute:: config_parameters
   .. autoattribute:: projected_distance_axis
   .. autoattribute:: selection_optional
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: estimate_best_fit
   .. automethod:: estimate_counts
   .. automethod:: estimate_errn_errp
   .. automethod:: estimate_flux_point
   .. automethod:: estimate_npred
   .. automethod:: estimate_npred_excess
   .. automethod:: estimate_scan
   .. automethod:: estimate_ts
   .. automethod:: estimate_ul
   .. automethod:: get_scale_model
   .. automethod:: run
